# rofi-blocks

./: .gitignore  CHANGELOG  CONTRIBUTING  Makefile.am  README.md  configure.ac  gcovr.cfg  meson.build  meson.options
.github/workflows/: static.yml
dev-tools/: continuous-build.sh  github-action-build.sh  run
dev-tools/assets/: base.css
dev-tools/docker/: Dockerfile
dev-tools/docker/entrypoints/: run-ui-tests.entrypoint.sh
dev-tools/scripts/: build-html.js  package-lock.json  package.json  run.js
docs/: code-example.css  contributing.html  doc.css  index.html  test-report.css  test-report.html  test-report.js
example/: top.sh  top_basic.sh
example/scripts/: action_logger.sh  action_logger_event_format.sh  top_basic.sh
examples/: action_logger.sh  action_logger_event_format.sh  action_logger_with_date.sh  blocks_wrap_args.sh  exit_test.sh  focus_entry.sh  input_test.sh  prompt_input_test.sh  show_lines.sh  top_advanced.sh  top_basic.sh
examples/scripts/: action_logger.sh  action_logger_event_format.sh  action_logger_with_date.sh  blocks_wrap_args.sh  exit_test.sh  focus_entry.sh  input_test.sh  prompt_input_test.sh  show_lines.sh  top_advanced.sh  top_basic.sh
src/: Makefile.am  blocks.c  blocks_mode_data.c  blocks_mode_data.h  extended.c  json_glib_extensions.c  json_glib_extensions.h  page_data.c  page_data.h  render_state.c  render_state.h  string_utils.c  string_utils.h
test-utils/ui/: rofi-theme.rasi
test-utils/ui/reports/assets/: report.css  report.html
tests/: Makefile.am  check_page_data.c  check_string_utils.c  entrypoint.test.c  simple_tap_test_util.h
tests/ui/: test--xvfb.sh  test.sh
tests/ui/UIT001/: DESCRIPTION  script
tests/ui/UIT002/: DESCRIPTION  script
tests/ui/UIT003/: DESCRIPTION  result-text-1.txt  script
tests/ui/assets/reports/assets/: report.css  report.js
tests/ui/assets/reports/test-x/: report.html
tests/ui/scripts/: test-1.sh  test-2.sh
tests/unit/: Makefile.am  entrypoint.test.c  simple_tap_test_util.h
